# alexa-skills

./: README.md  pyproject.toml
gemini-skill/: .gitignore  README.md
gemini-skill/backend/: main.py  requirements.txt
gemini-skill/skill-package/interactionModels/custom/: en-US.json
shared/: __init__.py  alexa_utils.py
